updates and changes to fix gulp tasks

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,8 +17,8 @@ html
         p
           | "This website is used to save a few useful links and resources
           | for front/back end development. Updates and reasons for choosing
-          | these links belong to Philosophy and Design. But feel free to fork this project in GitHub."  
-
+          | these links belong to Philosophy and Design. But feel free to fork this project in GitHub."
+      .row#content
 
     a(href='#top') Back to Top
 
